Fix jumping job tabs in work section and images in projects section

--- a/css/style.css
+++ b/css/style.css
@@ -57,6 +57,7 @@ body {
 .section-hero {
   background-color: #ebf1fe;
   padding: 4.8rem 0 9.6rem 0;
+  /* height: 100vh; */
 }
 
 .hero {
@@ -118,6 +119,7 @@ body {
 
   /* DBL CHECK BOTTOM */
   overflow: hidden;
+  height: 50vh;
   /* position: absolute; */
 }
 
@@ -125,7 +127,8 @@ body {
   font-size: 4.4rem;
   position: relative;
   /* top: 35rem; */
-  top: 15vh;
+  /* top: 15vh; */
+  top: 25vh;
   left: 50%;
   height: 0;
   transform: translate(-50%, -50%);
@@ -226,8 +229,8 @@ canvas {
   display: flex;
   flex-direction: column;
   list-style: none;
-  gap: 1rem;
-  justify-content: space-between;
+  gap: 4rem;
+  /* justify-content: space-between; */
 }
 
 /* For the background color hover transition */
